// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a div with class none if there are no saved tasks 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedTasks
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    user={
        Object {
            "savedTasks": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
>
          <FormattedMessage
                    defaultMessage="Tracked Tasks"
                    id="UserProfile.savedTasks.header"
                    values={Object {}}
          />
</h2>,
        <div
          className="none"
>
          No Tasks
</div>,
      ],
      "className": "saved-tasks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Tracked Tasks"
            id="UserProfile.savedTasks.header"
            values={Object {}}
/>,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Tracked Tasks",
            "id": "UserProfile.savedTasks.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No Tasks",
          "className": "none",
        },
        "ref": null,
        "rendered": "No Tasks",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
>
            <FormattedMessage
                        defaultMessage="Tracked Tasks"
                        id="UserProfile.savedTasks.header"
                        values={Object {}}
            />
</h2>,
          <div
            className="none"
>
            No Tasks
</div>,
        ],
        "className": "saved-tasks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Tracked Tasks"
              id="UserProfile.savedTasks.header"
              values={Object {}}
/>,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Tracked Tasks",
              "id": "UserProfile.savedTasks.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No Tasks",
            "className": "none",
          },
          "ref": null,
          "rendered": "No Tasks",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders a list of the saved tasks with links to each 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedTasks
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    user={
        Object {
            "savedTasks": Array [
              Object {
                "id": 123,
                "name": "First Task",
                "parent": Object {
                  "id": 321,
                  "name": "First Challenge",
                },
              },
              Object {
                "id": 456,
                "name": "Second Task",
                "parent": Object {
                  "id": 654,
                  "name": "Second Challenge",
                },
              },
              Object {
                "id": 789,
                "name": "Third Task",
                "parent": Object {
                  "id": 987,
                  "name": "Third Challenge",
                },
              },
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
>
          <FormattedMessage
                    defaultMessage="Tracked Tasks"
                    id="UserProfile.savedTasks.header"
                    values={Object {}}
          />
</h2>,
        <ul>
          <li
                    className="columns saved-tasks__task"
          >
                    <div
                              className="column is-four-fifths"
                    >
                              <Link
                                        replace={false}
                                        to="/challenge/321/task/123"
                              >
                                        First Task
                                         — 
                                        First Challenge
                              </Link>
                    </div>
                    <div
                              className="column"
                    >
                              <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                              >
                                        <SvgSymbol
                                                  className="icon"
                                                  sym="trash-icon"
                                                  viewBox="0 0 20 20"
                                        />
                              </a>
                    </div>
          </li>
          <li
                    className="columns saved-tasks__task"
          >
                    <div
                              className="column is-four-fifths"
                    >
                              <Link
                                        replace={false}
                                        to="/challenge/654/task/456"
                              >
                                        Second Task
                                         — 
                                        Second Challenge
                              </Link>
                    </div>
                    <div
                              className="column"
                    >
                              <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                              >
                                        <SvgSymbol
                                                  className="icon"
                                                  sym="trash-icon"
                                                  viewBox="0 0 20 20"
                                        />
                              </a>
                    </div>
          </li>
          <li
                    className="columns saved-tasks__task"
          >
                    <div
                              className="column is-four-fifths"
                    >
                              <Link
                                        replace={false}
                                        to="/challenge/987/task/789"
                              >
                                        Third Task
                                         — 
                                        Third Challenge
                              </Link>
                    </div>
                    <div
                              className="column"
                    >
                              <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                              >
                                        <SvgSymbol
                                                  className="icon"
                                                  sym="trash-icon"
                                                  viewBox="0 0 20 20"
                                        />
                              </a>
                    </div>
          </li>
</ul>,
      ],
      "className": "saved-tasks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Tracked Tasks"
            id="UserProfile.savedTasks.header"
            values={Object {}}
/>,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Tracked Tasks",
            "id": "UserProfile.savedTasks.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="columns saved-tasks__task"
>
              <div
                            className="column is-four-fifths"
              >
                            <Link
                                          replace={false}
                                          to="/challenge/321/task/123"
                            >
                                          First Task
                                           — 
                                          First Challenge
                            </Link>
              </div>
              <div
                            className="column"
              >
                            <a
                                          className="button is-clear"
                                          onClick={[Function]}
                                          title={undefined}
                            >
                                          <SvgSymbol
                                                        className="icon"
                                                        sym="trash-icon"
                                                        viewBox="0 0 20 20"
                                          />
                            </a>
              </div>
</li>,
            <li
              className="columns saved-tasks__task"
>
              <div
                            className="column is-four-fifths"
              >
                            <Link
                                          replace={false}
                                          to="/challenge/654/task/456"
                            >
                                          Second Task
                                           — 
                                          Second Challenge
                            </Link>
              </div>
              <div
                            className="column"
              >
                            <a
                                          className="button is-clear"
                                          onClick={[Function]}
                                          title={undefined}
                            >
                                          <SvgSymbol
                                                        className="icon"
                                                        sym="trash-icon"
                                                        viewBox="0 0 20 20"
                                          />
                            </a>
              </div>
</li>,
            <li
              className="columns saved-tasks__task"
>
              <div
                            className="column is-four-fifths"
              >
                            <Link
                                          replace={false}
                                          to="/challenge/987/task/789"
                            >
                                          Third Task
                                           — 
                                          Third Challenge
                            </Link>
              </div>
              <div
                            className="column"
              >
                            <a
                                          className="button is-clear"
                                          onClick={[Function]}
                                          title={undefined}
                            >
                                          <SvgSymbol
                                                        className="icon"
                                                        sym="trash-icon"
                                                        viewBox="0 0 20 20"
                                          />
                            </a>
              </div>
</li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "123",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="column is-four-fifths"
>
                  <Link
                                    replace={false}
                                    to="/challenge/321/task/123"
                  >
                                    First Task
                                     — 
                                    First Challenge
                  </Link>
</div>,
                <div
                  className="column"
>
                  <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                  >
                                    <SvgSymbol
                                                      className="icon"
                                                      sym="trash-icon"
                                                      viewBox="0 0 20 20"
                                    />
                  </a>
</div>,
              ],
              "className": "columns saved-tasks__task",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/challenge/321/task/123"
>
                    First Task
                     — 
                    First Challenge
</Link>,
                  "className": "column is-four-fifths",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "First Task",
                      " — ",
                      "First Challenge",
                    ],
                    "replace": false,
                    "to": "/challenge/321/task/123",
                  },
                  "ref": null,
                  "rendered": Array [
                    "First Task",
                    " — ",
                    "First Challenge",
                  ],
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "456",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="column is-four-fifths"
>
                  <Link
                                    replace={false}
                                    to="/challenge/654/task/456"
                  >
                                    Second Task
                                     — 
                                    Second Challenge
                  </Link>
</div>,
                <div
                  className="column"
>
                  <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                  >
                                    <SvgSymbol
                                                      className="icon"
                                                      sym="trash-icon"
                                                      viewBox="0 0 20 20"
                                    />
                  </a>
</div>,
              ],
              "className": "columns saved-tasks__task",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/challenge/654/task/456"
>
                    Second Task
                     — 
                    Second Challenge
</Link>,
                  "className": "column is-four-fifths",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Second Task",
                      " — ",
                      "Second Challenge",
                    ],
                    "replace": false,
                    "to": "/challenge/654/task/456",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Second Task",
                    " — ",
                    "Second Challenge",
                  ],
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "789",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="column is-four-fifths"
>
                  <Link
                                    replace={false}
                                    to="/challenge/987/task/789"
                  >
                                    Third Task
                                     — 
                                    Third Challenge
                  </Link>
</div>,
                <div
                  className="column"
>
                  <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                  >
                                    <SvgSymbol
                                                      className="icon"
                                                      sym="trash-icon"
                                                      viewBox="0 0 20 20"
                                    />
                  </a>
</div>,
              ],
              "className": "columns saved-tasks__task",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/challenge/987/task/789"
>
                    Third Task
                     — 
                    Third Challenge
</Link>,
                  "className": "column is-four-fifths",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Third Task",
                      " — ",
                      "Third Challenge",
                    ],
                    "replace": false,
                    "to": "/challenge/987/task/789",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Third Task",
                    " — ",
                    "Third Challenge",
                  ],
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
>
            <FormattedMessage
                        defaultMessage="Tracked Tasks"
                        id="UserProfile.savedTasks.header"
                        values={Object {}}
            />
</h2>,
          <ul>
            <li
                        className="columns saved-tasks__task"
            >
                        <div
                                    className="column is-four-fifths"
                        >
                                    <Link
                                                replace={false}
                                                to="/challenge/321/task/123"
                                    >
                                                First Task
                                                 — 
                                                First Challenge
                                    </Link>
                        </div>
                        <div
                                    className="column"
                        >
                                    <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                    >
                                                <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                                />
                                    </a>
                        </div>
            </li>
            <li
                        className="columns saved-tasks__task"
            >
                        <div
                                    className="column is-four-fifths"
                        >
                                    <Link
                                                replace={false}
                                                to="/challenge/654/task/456"
                                    >
                                                Second Task
                                                 — 
                                                Second Challenge
                                    </Link>
                        </div>
                        <div
                                    className="column"
                        >
                                    <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                    >
                                                <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                                />
                                    </a>
                        </div>
            </li>
            <li
                        className="columns saved-tasks__task"
            >
                        <div
                                    className="column is-four-fifths"
                        >
                                    <Link
                                                replace={false}
                                                to="/challenge/987/task/789"
                                    >
                                                Third Task
                                                 — 
                                                Third Challenge
                                    </Link>
                        </div>
                        <div
                                    className="column"
                        >
                                    <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                    >
                                                <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                                />
                                    </a>
                        </div>
            </li>
</ul>,
        ],
        "className": "saved-tasks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Tracked Tasks"
              id="UserProfile.savedTasks.header"
              values={Object {}}
/>,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Tracked Tasks",
              "id": "UserProfile.savedTasks.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="columns saved-tasks__task"
>
                <div
                                className="column is-four-fifths"
                >
                                <Link
                                                replace={false}
                                                to="/challenge/321/task/123"
                                >
                                                First Task
                                                 — 
                                                First Challenge
                                </Link>
                </div>
                <div
                                className="column"
                >
                                <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                >
                                                <SvgSymbol
                                                                className="icon"
                                                                sym="trash-icon"
                                                                viewBox="0 0 20 20"
                                                />
                                </a>
                </div>
</li>,
              <li
                className="columns saved-tasks__task"
>
                <div
                                className="column is-four-fifths"
                >
                                <Link
                                                replace={false}
                                                to="/challenge/654/task/456"
                                >
                                                Second Task
                                                 — 
                                                Second Challenge
                                </Link>
                </div>
                <div
                                className="column"
                >
                                <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                >
                                                <SvgSymbol
                                                                className="icon"
                                                                sym="trash-icon"
                                                                viewBox="0 0 20 20"
                                                />
                                </a>
                </div>
</li>,
              <li
                className="columns saved-tasks__task"
>
                <div
                                className="column is-four-fifths"
                >
                                <Link
                                                replace={false}
                                                to="/challenge/987/task/789"
                                >
                                                Third Task
                                                 — 
                                                Third Challenge
                                </Link>
                </div>
                <div
                                className="column"
                >
                                <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                >
                                                <SvgSymbol
                                                                className="icon"
                                                                sym="trash-icon"
                                                                viewBox="0 0 20 20"
                                                />
                                </a>
                </div>
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "123",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="column is-four-fifths"
>
                    <Link
                                        replace={false}
                                        to="/challenge/321/task/123"
                    >
                                        First Task
                                         — 
                                        First Challenge
                    </Link>
</div>,
                  <div
                    className="column"
>
                    <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                    >
                                        <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                        />
                    </a>
</div>,
                ],
                "className": "columns saved-tasks__task",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/challenge/321/task/123"
>
                      First Task
                       — 
                      First Challenge
</Link>,
                    "className": "column is-four-fifths",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "First Task",
                        " — ",
                        "First Challenge",
                      ],
                      "replace": false,
                      "to": "/challenge/321/task/123",
                    },
                    "ref": null,
                    "rendered": Array [
                      "First Task",
                      " — ",
                      "First Challenge",
                    ],
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="button is-clear"
                      onClick={[Function]}
                      title={undefined}
>
                      <SvgSymbol
                                            className="icon"
                                            sym="trash-icon"
                                            viewBox="0 0 20 20"
                      />
</a>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <SvgSymbol
                        className="icon"
                        sym="trash-icon"
                        viewBox="0 0 20 20"
/>,
                      "className": "button is-clear",
                      "onClick": [Function],
                      "title": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "icon",
                        "sym": "trash-icon",
                        "viewBox": "0 0 20 20",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "456",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="column is-four-fifths"
>
                    <Link
                                        replace={false}
                                        to="/challenge/654/task/456"
                    >
                                        Second Task
                                         — 
                                        Second Challenge
                    </Link>
</div>,
                  <div
                    className="column"
>
                    <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                    >
                                        <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                        />
                    </a>
</div>,
                ],
                "className": "columns saved-tasks__task",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/challenge/654/task/456"
>
                      Second Task
                       — 
                      Second Challenge
</Link>,
                    "className": "column is-four-fifths",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "Second Task",
                        " — ",
                        "Second Challenge",
                      ],
                      "replace": false,
                      "to": "/challenge/654/task/456",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Second Task",
                      " — ",
                      "Second Challenge",
                    ],
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="button is-clear"
                      onClick={[Function]}
                      title={undefined}
>
                      <SvgSymbol
                                            className="icon"
                                            sym="trash-icon"
                                            viewBox="0 0 20 20"
                      />
</a>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <SvgSymbol
                        className="icon"
                        sym="trash-icon"
                        viewBox="0 0 20 20"
/>,
                      "className": "button is-clear",
                      "onClick": [Function],
                      "title": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "icon",
                        "sym": "trash-icon",
                        "viewBox": "0 0 20 20",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "789",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="column is-four-fifths"
>
                    <Link
                                        replace={false}
                                        to="/challenge/987/task/789"
                    >
                                        Third Task
                                         — 
                                        Third Challenge
                    </Link>
</div>,
                  <div
                    className="column"
>
                    <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                    >
                                        <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                        />
                    </a>
</div>,
                ],
                "className": "columns saved-tasks__task",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/challenge/987/task/789"
>
                      Third Task
                       — 
                      Third Challenge
</Link>,
                    "className": "column is-four-fifths",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "Third Task",
                        " — ",
                        "Third Challenge",
                      ],
                      "replace": false,
                      "to": "/challenge/987/task/789",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Third Task",
                      " — ",
                      "Third Challenge",
                    ],
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="button is-clear"
                      onClick={[Function]}
                      title={undefined}
>
                      <SvgSymbol
                                            className="icon"
                                            sym="trash-icon"
                                            viewBox="0 0 20 20"
                      />
</a>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <SvgSymbol
                        className="icon"
                        sym="trash-icon"
                        viewBox="0 0 20 20"
/>,
                      "className": "button is-clear",
                      "onClick": [Function],
                      "title": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "icon",
                        "sym": "trash-icon",
                        "viewBox": "0 0 20 20",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
